--- a/portfolio.html
+++ b/portfolio.html
@@ -260,6 +260,13 @@
           </li>
         </ul>
       </div>
+      <form class="footer-form">
+        <b class="footer-form-title">Подпишитесь на рассылку</b>
+        <div class="footer-form-element">
+          <input class="footer-form-mail" type="email" name="footer-mail" placeholder="E-mail">
+          <button class="footer-form-btn" type="submit">Подписаться</button>
+        </div>
+      </form>
     </div>
   </footer>
 </body>
