--- a/index.html
+++ b/index.html
@@ -379,27 +379,36 @@
     <div class="modal">
       <button class="modal-close-btn" type="button" data-modal-close>
         <svg class="modal-close-icon" width="11" height="11">
-          <use href="./images/sprite.svg#icon-modal-close-btn"></use>
+          <use href="./images/sprite.svg#icon-form-close-btn"></use>
         </svg>
       </button>
       <form class="form js-speaker-form">
         <b class="form-title">Оставьте свои данные, мы вам перезвоним</b>
-        <div class="form-field">
-          <label class="label form-label-name" for="name">Имя</label>
-          <input class="input form-input-name" type="text" name="name" id="name" autofocus>
-        </div>
-        <div class="form-field">
-          <label class="label form-label-tel" for="tel">Телефон</label>
-          <input class="input form-input-tel" type="tel" name="tel" id="tel">
-        </div>
-        <div class="form-field">
-          <label class="label form-label-mail" for="mail">Почта</label>
-          <input class="input form-input-mail" type="email" name="mail" id="mail">
-        </div>
-        <div class="form-field">
-          <label class="label form-label-comment" for="comment">Комментарий</label>
-          <textarea class="input form-input-comment" name="comment" id="comment" placeholder="Введите текст"></textarea>
-        </div>
+        <label class="label form-label-name">
+          <span class="label-text">Имя</span>          
+          <input class="input form-input-name" type="text" name="name" autofocus>
+          <svg class="form-icon" width="18" height="18">
+            <use href="./images/sprite.svg#icon-form-name"></use>
+          </svg>
+        </label>
+        <label class="label form-label-tel">
+          <span class="label-text">Телефон</span>          
+          <input class="input form-input-tel" type="tel" name="tel">
+          <svg class="form-icon" width="18" height="18">
+            <use href="./images/sprite.svg#icon-form-phone"></use>
+          </svg>
+        </label>
+        <label class="label form-label-mail">
+          <span class="label-text">Почта</span>          
+          <input class="input form-input-mail" type="email" name="mail">
+          <svg class="form-icon" width="18" height="18">
+            <use href="./images/sprite.svg#icon-form-email"></use>
+          </svg>
+        </label>
+        <label class="label form-label-comment">
+          <span class="label-text">Комментарий</span>          
+          <textarea class="input form-input-comment" name="comment" placeholder="Введите текст"></textarea>
+        </label>
         <input class="form-input-policy" type="checkbox" name="policy" id="policy">
         <label class="form-label-policy" for="policy">Соглашаюсь с рассылкой и принимаю <a href="">Условия договора</a></label>
         <button class="form-submit-btn" type="submit">Оставить</button>
