--- a/index.html
+++ b/index.html
@@ -409,8 +409,13 @@
           <span class="label-text">Комментарий</span>          
           <textarea class="input form-input-comment" name="comment" placeholder="Введите текст"></textarea>
         </label>
-        <input class="form-input-policy" type="checkbox" name="policy" id="policy">
-        <label class="form-label-policy" for="policy">Соглашаюсь с рассылкой и принимаю <a href="">Условия договора</a></label>
+        <label class="form-label-policy">
+          <input class="form-input-policy" type="checkbox" name="policy">
+          <svg class="form-icon-policy" width="16" height="15">
+            <use href="./images/sprite.svg#icon-form-ok"></use>
+          </svg>
+          Соглашаюсь с рассылкой и принимаю <a href="">Условия договора</a>
+        </label>
         <button class="form-submit-btn" type="submit">Оставить</button>
       </form>
     </div>
