--- a/index.html
+++ b/index.html
@@ -411,9 +411,7 @@
         </label>
         <label class="form-label-policy">
           <input class="form-input-policy" type="checkbox" name="policy">
-          <svg class="form-icon-policy" width="16" height="15">
-            <use href="./images/sprite.svg#icon-form-ok"></use>
-          </svg>
+          <span class="form-icon-policy"></span>
           Соглашаюсь с рассылкой и принимаю <a href="">Условия договора</a>
         </label>
         <button class="form-submit-btn" type="submit">Оставить</button>
