--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
           <textarea class="input form-input-comment" name="comment" placeholder="Введите текст"></textarea>
         </label>
         <label class="form-label-policy">
-          <input class="form-input-policy" type="checkbox" name="policy">
+          <input class="visually-hidden form-input-policy" type="checkbox" name="policy">
           <span class="form-icon-policy"></span>
           Соглашаюсь с рассылкой и принимаю <a href="">Условия договора</a>
         </label>
