--- a/index.html
+++ b/index.html
@@ -385,29 +385,29 @@
       <form class="form js-speaker-form">
         <b class="form-title">Оставьте свои данные, мы вам перезвоним</b>
         <label class="label form-label-name">
-          <span class="label-text">Имя</span>          
-          <input class="input form-input-name" type="text" name="name" autofocus>
+          <input class="input form-input-name" type="text" name="name" placeholder=" " autofocus>
+          <span class="label-text">Имя</span>
           <svg class="form-icon" width="18" height="18">
             <use href="./images/sprite.svg#icon-form-name"></use>
           </svg>
         </label>
         <label class="label form-label-tel">
-          <span class="label-text">Телефон</span>          
-          <input class="input form-input-tel" type="tel" name="tel">
+          <input class="input form-input-tel" type="tel" name="tel" placeholder=" ">
+          <span class="label-text">Телефон</span>
           <svg class="form-icon" width="18" height="18">
             <use href="./images/sprite.svg#icon-form-phone"></use>
           </svg>
         </label>
         <label class="label form-label-mail">
-          <span class="label-text">Почта</span>          
-          <input class="input form-input-mail" type="email" name="mail">
+          <input class="input form-input-mail" type="email" name="mail" placeholder=" ">
+          <span class="label-text">Почта</span>
           <svg class="form-icon" width="18" height="18">
             <use href="./images/sprite.svg#icon-form-email"></use>
           </svg>
         </label>
         <label class="label form-label-comment">
-          <span class="label-text">Комментарий</span>          
           <textarea class="input form-input-comment" name="comment" placeholder="Введите текст"></textarea>
+          <span class="label-text-comment">Комментарий</span>
         </label>
         <label class="form-label-policy">
           <input class="visually-hidden form-input-policy" type="checkbox" name="policy">
