--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
           <span class="label-text-comment">Комментарий</span>
         </label>
         <label class="form-label-policy">
-          <input class="visually-hidden form-input-policy" type="checkbox" name="policy">
+          <input class="visually-hidden form-input-policy" type="checkbox" name="policy" value="accept-policy">
           <span class="form-icon-policy"></span>
           Соглашаюсь с рассылкой и принимаю <a href="">Условия договора</a>
         </label>
